Fix/table fixes (#189)
* fix(table): Sets word break on table cell

* fix(rich-text): Adds thead element styling to richt-text component

* feat(table): Adds alignment option for end of cell

* added changesets

--- a/components/rich-text/src/_mixin.scss
+++ b/components/rich-text/src/_mixin.scss
@@ -73,6 +73,10 @@
     @include dictu-table.dictu-table__cell;
   }
 
+  :where(thead) {
+    @include dictu-table.dictu-table__head;
+  }
+
   :where(tfoot) {
     @include dictu-table.dictu-table__foot;
   }
